--- a/src/main/resources/config/mit-configuration.properties
+++ b/src/main/resources/config/mit-configuration.properties
@@ -16,6 +16,9 @@ google.apy-key=AIzaSyBzUYmMIAydTHjdxVAS6Js7NS4s7R8K3ZA
 facebook.app-id=960070054039642
 facebook.appSecret=28b3d27683b904e5ac233872ad5ad464
 
+#SOUNDCLOUD
+soundcloud.client-id:f3bc0c6799aa2d97cadc7ca1c47ed540
+
 #MEDIA
 media.users-images.folder=C:/Users/robyn_000/Progetti/mit/server/media/images/users/
 media.bands-images.folder=C:/Users/robyn_000/Progetti/mit/server/media/images/bands/
