Gestita galleria fotografica in view band

--- a/src/main/resources/config/mit-configuration.properties
+++ b/src/main/resources/config/mit-configuration.properties
@@ -41,3 +41,7 @@ media.audio.max-size=10485760
 
 #DASHBOARD
 notifications.page-size=3
+
+#VIEW BAND
+viewband.videos.page-size=6
+viewband.gallery.page-size=6
