--- a/src/main/resources/config/mit-configuration.properties
+++ b/src/main/resources/config/mit-configuration.properties
@@ -46,3 +46,7 @@ notifications.page-size=3
 viewband.videos.page-size=6
 viewband.gallery.page-size=8
 viewband.audio.page-size=6
+
+#SMTP
+smtp.host=localhost
+smtp.port=25
