Completamento notifiche email.

--- a/src/main/resources/config/mit-configuration.properties
+++ b/src/main/resources/config/mit-configuration.properties
@@ -1,6 +1,8 @@
 #VERSION - FOR STYLE AND SCRIPT RELOAD
 software.version=1
 
+portal-url=http://localhost:8081/mit-portal/
+
 #INTERVALS
 notification.icon-interval=60000
 notification.read-interval=500
@@ -48,5 +50,9 @@ viewband.gallery.page-size=8
 viewband.audio.page-size=6
 
 #SMTP
-smtp.host=localhost
+smtp.host=smtp.gmail.com
 smtp.port=25
+smtp.user=infomusicintown@gmail.com
+smtp.password=BiancaNeve1978
+mail.from=infomusicintown@gmail.com
+mail.from-name=Music in Town
